--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "openai>=1.13.3",
     "litellm==1.68.0",
     "instructor>=1.3.3",
+    "langchain>=0.1.0",
     # Text Processing
     "pdfplumber>=0.11.4",
     "regex>=2024.9.11",
