--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ json-repair==0.25.2
 opentelemetry-api==1.30.0
 opentelemetry-sdk==1.30.0
 opentelemetry-exporter-otlp-proto-http==1.30.0
+json5==0.9.14
